--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 <head>
-<title>Page Title</title>
+  <title>Home</title>
+  <style>
+   
+  </style>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <div style=
+       "background-color: white;
+        max-width: 400px;
+        max-height: 400px;">
+    <img src="
+    
+  </div>
 
 </body>
 </html>
